# EmotionCam

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
emotioncam/: .gitignore  README.md  build_exe.py  pyproject.toml  requirements.txt
emotioncam/app/: __init__.py  main.py
emotioncam/app/assets/: README.md  expression_examples.json
emotioncam/app/core/: __init__.py  ai_agent_classifier.py  ai_client.py  ai_privacy.py  ai_rate_limiter.py  ai_settings.py  background_notifications.py  camera_worker.py  config.py  (+15 more)
emotioncam/docs/: EmotionCam_User_Manual.docx  README_DOCS.md  START_DEMO_HERE.html  START_DEMO_HERE.md  capture_docs_screenshots.py  demo_script.md  generate_manual_formats.py  generate_manual_pdf.py  generate_placeholders.ps1  release_notes_v1.1.0_ai.md  release_notes_v1.1.1_ai.md  release_notes_v1.1.2_ai.md  release_notes_v1.1.3_ai.md  release_notes_v1.2.0_ai.md  render_static_screens.py  screenshot_checklist.md  user_manual.html  user_manual.md
emotioncam/installer/: emotioncam.iss
emotioncam/release/: README.md
emotioncam/tests/: test_ai_integration.py  test_background_notifications.py  test_calibration_dialog.py  test_camera_worker.py  test_config.py  test_demo_guide.py  test_email_summary.py  test_expression_classifier.py  test_expression_example.py  test_expression_labels.py  test_face_detector.py  test_icon_wiring.py  test_interaction_engine.py  test_logger.py  test_personalized_classifier.py  test_settings_dialog.py  test_smoothing.py  test_statistics.py  test_statistics_window.py  test_theme.py  test_user_profile.py
(+11 files in other folders)
